First draft final
Ya pagina terminada, primer borrador para que Anna revise

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,29 +1,37 @@
-*,*::after, *::before {
+*,
+*::after,
+*::before {
     margin: 0;
     padding: 0;
-    box-sizing: inherit; 
+    box-sizing: inherit;
     /* this box sizing says that it will not include padding and margin to total dimensions of box */
 }
 /* basic reset, adds css to everything for every browser */
 html {
     font-size: 62.5%;
-    font-family: 'quicksand';
+    font-family: "quicksand";
 
     /* this changes rem value to 10 isntead of 16, set to percetnage for adaptability of user */
     // this defines what a 1rem is
-
+    @media screen and (max-width: 450px) {
+        font-size: 50%; //1rem = 9px
+    }
+    @media screen and (max-width: 800px) {
+        font-size: 56.25%; //1rem = 9px
+    }
     // @include respond(tab-land) {
     //     font-size: 56.25%; //1rem = 9px
     // }
     // @include respond(tab-port) {
     //     font-size: 50%; //1rem = 8px
-    // }   
+    // }
     // @include respond(big-desktop) {
     //     font-size: 75%; //1rem = 12px
-    // }
+    // // }
 }
 a {
     text-decoration: none;
+    color: inherit;
 }
 body {
     box-sizing: border-box;
@@ -38,3 +46,8 @@ body {
 // //     background-color: $color-primary;
 // //     color: $color-white;
 // // }
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+
+#main {
+    transition: margin-left 0.5s; /* If you want a transition effect */
+}
