--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -1,4 +1,6 @@
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
@@ -7,16 +9,28 @@
 /* basic reset, adds css to everything for every browser */
 html {
   font-size: 62.5%;
-  font-family: 'quicksand';
+  font-family: "quicksand";
   /* this changes rem value to 10 isntead of 16, set to percetnage for adaptability of user */ }
+  @media screen and (max-width: 450px) {
+    html {
+      font-size: 50%; } }
+  @media screen and (max-width: 800px) {
+    html {
+      font-size: 56.25%; } }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: inherit; }
 
 body {
   box-sizing: border-box;
   background-color: #010000;
   /* changes the box model to make the content area the total border size, easier calculations */ }
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+  transition: margin-left 0.5s;
+  /* If you want a transition effect */ }
 
 @font-face {
   font-family: "quicksand";
@@ -43,6 +57,17 @@ body {
   src: url("../fonts/Quicksand-SemiBold.ttf");
   font-weight: 600; }
 
+.footer {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center; }
+  .footer-title {
+    color: white;
+    font-size: 1.6em;
+    font-weight: 300;
+    padding: 2rem; }
+
 .nav {
   position: fixed;
   z-index: 1000;
@@ -50,11 +75,32 @@ body {
   padding: 2rem;
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  transition: all 0.4s ease-out; }
   .nav-left {
     color: white; }
   .nav-right {
     color: white; }
+    @media screen and (max-width: 1100px) {
+      .nav-right {
+        height: 100%;
+        /* 100% Full-height */
+        width: 0;
+        /* 0 width - change this with JavaScript */
+        position: fixed;
+        /* Stay in place */
+        z-index: 1;
+        /* Stay on top */
+        top: 0;
+        left: 0;
+        background-color: #111;
+        /* Black*/
+        overflow-x: hidden;
+        /* Disable horizontal scroll */
+        padding-top: 60px;
+        /* Place content 60px from the top */
+        transition: 0.5s;
+        /* 0.5 second transition effect to slide in the sidebar */ } }
   .nav-title {
     color: white;
     font-size: 3em;
@@ -66,18 +112,64 @@ body {
     text-transform: uppercase;
     margin: 0 1rem;
     font-weight: 600; }
+    @media screen and (max-width: 1100px) {
+      .nav-item {
+        display: none;
+        font-size: 2em;
+        padding: 1rem 2rem;
+        font-weight: 300; } }
+  .nav-transparent {
+    background-color: transparent; }
+  .nav-dark {
+    background-color: rgba(0, 0, 0, 0.6); }
+  .nav-burger {
+    display: none;
+    font-size: 2.5em;
+    font-weight: 300; }
+    @media screen and (max-width: 1100px) {
+      .nav-burger {
+        display: inline-block;
+        color: white; } }
+  .nav-close {
+    display: none; }
+    @media screen and (max-width: 1100px) {
+      .nav-close {
+        display: block;
+        font-size: 5em; } }
+
+.logo {
+  width: 8rem; }
+  @media screen and (max-width: 600px) {
+    .logo {
+      margin-right: 2rem; } }
+  .logo-container {
+    display: flex;
+    align-items: center; }
+    .logo-container-2 {
+      padding: 4rem 2rem;
+      display: flex;
+      justify-content: start;
+      align-items: center; }
+  .logo-2 {
+    width: 15rem; }
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
   grid-gap: 5rem;
   justify-items: center;
-  align-items: center; }
+  align-items: center;
+  width: 100%; }
+  @media screen and (max-width: 800px) {
+    .container {
+      grid-template-columns: repeat(2, 1fr); } }
+  @media screen and (max-width: 600px) {
+    .container {
+      grid-template-columns: 1fr; } }
 
 .bgimg {
-  height: 50vh;
-  width: max-content;
+  height: 35rem;
   display: flex;
   width: 100%;
   justify-content: center;
@@ -89,33 +181,45 @@ body {
   .bgimg-ajolote {
     grid-column-start: 1;
     grid-column-end: 3;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/naturaleza/naturaleza (1).jpg"); }
-    .bgimg-ajolote:hover {
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/naturaleza/naturaleza (1).jpg"); }
+    width: 100%;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/naturaleza/naturaleza (1).jpg"); }
+    @media screen and (max-width: 800px) {
+      .bgimg-ajolote {
+        grid-column: auto; } }
   .bgimg-autoretratos {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/autoretratos/autoretrato (1).jpg"); }
-    .bgimg-autoretratos:hover {
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/autoretratos/autoretrato (1).jpg"); }
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/autoretratos/autoretrato (1).jpg"); }
   .bgimg-exlibris {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)); }
+    background-color: white;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../img/exlibris/exlibris (1).jpg"); }
   .bgimg-producto {
     grid-column-start: 2;
     grid-column-end: 4;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/productos/productos (1).jpg"); }
-    .bgimg-producto:hover {
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/productos/productos (1).jpg"); }
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../img/productos/productos (1).jpg"); }
+    @media screen and (max-width: 800px) {
+      .bgimg-producto {
+        grid-column: auto; } }
   .bgimg-microuniversos {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/proyectos/microuniversos/microuniverso (15).jpg"); }
-    .bgimg-microuniversos:hover {
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/proyectos/microuniversos/microuniverso (15).jpg"); }
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/proyectos/microuniversos/microuniverso (15).jpg"); }
   .bgimg-ojos {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/proyectos/ojos/ojo (11).jpg"); }
-    .bgimg-ojos:hover {
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/proyectos/ojos/ojo (11).jpg"); }
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/proyectos/ojos/ojo (11).jpg"); }
   .bgimg-retratos {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/retratos/retrato (13).jpg"); }
-    .bgimg-retratos:hover {
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/retratos/retrato (13).jpg"); }
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/retratos/retrato (13).jpg"); }
+  .bgimg-instagram {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/retratos/retrato (3).jpg"); }
+    .bgimg-instagram:hover {
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/retratos/retrato (3).jpg"); }
+  .bgimg-correo {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/naturaleza/naturaleza (14).jpg"); }
+    .bgimg-correo:hover {
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/naturaleza/naturaleza (14).jpg"); }
+  .bgimg-px {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/productos/productos (3).jpg"); }
+    .bgimg-px:hover {
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/productos/productos (3).jpg"); }
+  .bgimg-telefono {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/autoretratos/autoretrato (5).jpg"); }
+    .bgimg-telefono:hover {
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/autoretratos/autoretrato (5).jpg"); }
 
 .redirigir {
   color: white;
@@ -125,10 +229,83 @@ body {
   .redirigir:hover {
     transform: scale(1.2);
     cursor: pointer; }
+  .redirigir-small {
+    color: white;
+    font-weight: 500;
+    font-size: 1.7em;
+    transition: 0.3s all ease-in-out; }
+    .redirigir-small:hover {
+      transform: scale(1.2);
+      cursor: pointer; }
+
+.contact-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 5rem;
+  justify-items: center;
+  padding: 2rem 5rem;
+  height: 30rem; }
+  .contact-grid-sub {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around; }
+  @media screen and (max-width: 900px) {
+    .contact-grid {
+      grid-template-columns: repeat(2, 1fr);
+      height: 60rem; } }
+  @media screen and (max-width: 650px) {
+    .contact-grid {
+      grid-template-columns: 1fr;
+      height: 150rem; } }
+
+.contact-item {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  background-position: center;
+  background-size: cover;
+  border-radius: 1rem;
+  overflow: hidden; }
+  .contact-item-instagram {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/retratos/retrato (3).jpg"); }
+    .contact-item-instagram:hover {
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/retratos/retrato (3).jpg"); }
+  .contact-item-correo {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/naturaleza/naturaleza (14).jpg"); }
+    .contact-item-correo:hover {
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/naturaleza/naturaleza (14).jpg"); }
+  .contact-item-px {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/productos/productos (3).jpg"); }
+    .contact-item-px:hover {
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/productos/productos (3).jpg"); }
+  .contact-item-telefono {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/autoretratos/autoretrato (5).jpg"); }
+    .contact-item-telefono:hover {
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/autoretratos/autoretrato (5).jpg"); }
+
+.svg {
+  height: 5rem;
+  width: 5rem;
+  transition: 0.3s all ease-in-out; }
+  .svg:hover {
+    transform: scale(1.2);
+    cursor: pointer; }
+  .svg-big {
+    height: 9rem;
+    width: 9rem; }
+    .svg-big:hover {
+      transform: scale(1.2);
+      cursor: pointer; }
 
 .header {
   display: flex;
-  height: 90vh; }
+  height: 90vh;
+  width: 100%; }
+  @media screen and (max-width: 1100px) {
+    .header {
+      width: 100vw;
+      height: 80vh; } }
   .header-container {
     width: 100%; }
   .header-left {
@@ -147,6 +324,11 @@ body {
       background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/naturaleza/naturaleza (24).jpg"); }
       .header-left-2:hover {
         background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../img/naturaleza/naturaleza (24).jpg"); }
+    .header-left-3 {
+      background-color: white;
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/exlibris/exlibris (1).jpg"); }
+      .header-left-3:hover {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../img/exlibris/exlibris (1).jpg"); }
   .header-right {
     display: flex;
     justify-content: center;
@@ -174,7 +356,11 @@ body {
       transform: scale(1.2); }
 
 .about {
+  width: 100%;
   padding: 5rem; }
+  @media screen and (max-width: 1100px) {
+    .about {
+      width: 100vw; } }
   .about-title {
     color: white;
     font-size: 4em; }
@@ -183,6 +369,9 @@ body {
     font-size: 1.6em;
     width: 40%;
     margin: 2rem 1rem; }
+    @media screen and (max-width: 600px) {
+      .about-description {
+        width: 100%; } }
 
 .buttons {
   display: flex;
@@ -210,3 +399,101 @@ body {
     font-size: 4em;
     font-weight: 400;
     margin-bottom: 4rem; }
+
+.productos {
+  padding: 4.5rem;
+  width: 50vw; }
+  @media screen and (max-width: 600px) {
+    .productos {
+      width: 100%; } }
+  .productos-title {
+    color: white;
+    font-size: 4em;
+    font-weight: 300; }
+  .productos-description {
+    color: white;
+    font-size: 1.6em;
+    font-weight: 400;
+    margin: 2rem 0; }
+
+.grid {
+  column-count: 4;
+  column-gap: 1rem; }
+  @media screen and (max-width: 1200px) {
+    .grid {
+      column-count: 3; } }
+  @media screen and (max-width: 800px) {
+    .grid {
+      column-count: 2;
+      column-gap: 0.5rem; } }
+  .grid1, .grid2, .grid3, .grid4, .grid5 {
+    column-count: 4;
+    column-gap: 1rem; }
+    @media screen and (max-width: 1200px) {
+      .grid1, .grid2, .grid3, .grid4, .grid5 {
+        column-count: 3; } }
+    @media screen and (max-width: 800px) {
+      .grid1, .grid2, .grid3, .grid4, .grid5 {
+        column-count: 2;
+        column-gap: 0.5rem; } }
+  .grid-item {
+    margin-bottom: 2rem; }
+    @media screen and (max-width: 800px) {
+      .grid-item {
+        width: 100%; } }
+    @media screen and (max-width: 600px) {
+      .grid-item {
+        margin-bottom: 0.5rem; } }
+  .grid-photo {
+    transition: all 0.5s ease-out;
+    border-radius: 5px;
+    overflow: hidden; }
+    .grid-photo:hover {
+      transform: scale(1.05); }
+    @media screen and (max-width: 1200px) {
+      .grid-photo {
+        width: 100%; } }
+
+.invisible-box {
+  height: 10rem; }
+
+.original {
+  display: flex;
+  flex-direction: column;
+  margin: 5rem; }
+  .original-title {
+    color: white;
+    width: 50vw;
+    font-size: 3em;
+    font-weight: 300;
+    margin: 1rem 0; }
+    @media screen and (max-width: 600px) {
+      .original-title {
+        width: 100%; } }
+  .original-description {
+    color: white;
+    width: 50vw;
+    font-size: 1.6em;
+    font-weight: 400;
+    margin: 1rem 0; }
+    @media screen and (max-width: 600px) {
+      .original-description {
+        width: 100%; } }
+
+.btn {
+  margin: 2rem 0;
+  width: 15rem;
+  border-style: none;
+  background-color: transparent;
+  color: white;
+  font-size: 2em;
+  border: 1px solid white;
+  padding: 1rem 2rem;
+  transition: all 0.3s; }
+  .btn:hover {
+    color: black;
+    background-color: white; }
+
+.exlibris {
+  background-color: white;
+  overflow: hidden; }
