--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -417,42 +417,36 @@ body {
     margin: 2rem 0; }
 
 .grid {
-  column-count: 4;
-  column-gap: 1rem; }
-  @media screen and (max-width: 1200px) {
-    .grid {
-      column-count: 3; } }
+  padding: 4.5rem;
+  column-count: 3;
+  column-gap: 2rem; }
   @media screen and (max-width: 800px) {
     .grid {
       column-count: 2;
-      column-gap: 0.5rem; } }
+      column-gap: 0.5rem;
+      padding: 1rem; } }
   .grid1, .grid2, .grid3, .grid4, .grid5 {
-    column-count: 4;
-    column-gap: 1rem; }
-    @media screen and (max-width: 1200px) {
-      .grid1, .grid2, .grid3, .grid4, .grid5 {
-        column-count: 3; } }
+    column-count: 3;
+    column-gap: 2rem;
+    padding: 4.5rem; }
     @media screen and (max-width: 800px) {
       .grid1, .grid2, .grid3, .grid4, .grid5 {
+        padding: 1rem;
         column-count: 2;
         column-gap: 0.5rem; } }
   .grid-item {
-    margin-bottom: 2rem; }
-    @media screen and (max-width: 800px) {
-      .grid-item {
-        width: 100%; } }
+    margin-bottom: 2rem;
+    width: 100%; }
     @media screen and (max-width: 600px) {
       .grid-item {
         margin-bottom: 0.5rem; } }
   .grid-photo {
     transition: all 0.5s ease-out;
     border-radius: 5px;
-    overflow: hidden; }
+    overflow: hidden;
+    width: 100%; }
     .grid-photo:hover {
       transform: scale(1.05); }
-    @media screen and (max-width: 1200px) {
-      .grid-photo {
-        width: 100%; } }
 
 .invisible-box {
   height: 10rem; }
@@ -482,13 +476,13 @@ body {
 
 .btn {
   margin: 2rem 0;
-  width: 15rem;
+  width: 18rem;
   border-style: none;
   background-color: transparent;
   color: white;
   font-size: 2em;
   border: 1px solid white;
-  padding: 1rem 2rem;
+  padding: 1.5rem 2rem;
   transition: all 0.3s; }
   .btn:hover {
     color: black;
