--- a/sass/pages/_galerias.scss
+++ b/sass/pages/_galerias.scss
@@ -17,14 +17,13 @@
     }
 }
 .grid {
-    column-count: 4;
-    column-gap: 1rem;
-    @media screen and (max-width: 1200px) {
-        column-count: 3;
-    }
+    padding: 4.5rem;
+    column-count: 3;
+    column-gap: 2rem;
     @media screen and (max-width: 800px) {
         column-count: 2;
         column-gap: 0.5rem;
+        padding: 1rem;
     }
 
     &1,
@@ -32,21 +31,18 @@
     &3,
     &4,
     &5 {
-        column-count: 4;
-        column-gap: 1rem;
-        @media screen and (max-width: 1200px) {
-            column-count: 3;
-        }
+        column-count: 3;
+        column-gap: 2rem;
+        padding: 4.5rem;
         @media screen and (max-width: 800px) {
+            padding: 1rem;
             column-count: 2;
             column-gap: 0.5rem;
         }
     }
     &-item {
         margin-bottom: 2rem;
-        @media screen and (max-width: 800px) {
-            width: 100%;
-        }
+        width: 100%;
         @media screen and (max-width: 600px) {
             margin-bottom: 0.5rem;
         }
@@ -55,11 +51,9 @@
         transition: all 0.5s ease-out;
         border-radius: 5px;
         overflow: hidden;
+        width: 100%;
         &:hover {
             transform: scale(1.05);
-        }
-        @media screen and (max-width: 1200px) {
-            width: 100%;
         }
     }
 }
@@ -93,13 +87,13 @@
 }
 .btn {
     margin: 2rem 0;
-    width: 15rem;
+    width: 18rem;
     border-style: none;
     background-color: transparent;
     color: white;
     font-size: 2em;
     border: 1px solid white;
-    padding: 1rem 2rem;
+    padding: 1.5rem 2rem;
     transition: all 0.3s;
     &:hover {
         color: black;
