--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -11,12 +11,15 @@ html {
   font-size: 62.5%;
   font-family: "quicksand";
   /* this changes rem value to 10 isntead of 16, set to percetnage for adaptability of user */ }
-  @media screen and (max-width: 450px) {
-    html {
-      font-size: 50%; } }
   @media screen and (max-width: 800px) {
     html {
       font-size: 56.25%; } }
+  @media screen and (max-width: 450px) {
+    html {
+      font-size: 50%; } }
+  @media screen and (max-width: 350px) {
+    html {
+      font-size: 44.75%; } }
 
 a {
   text-decoration: none;
@@ -199,27 +202,11 @@ body {
       .bgimg-producto {
         grid-column: auto; } }
   .bgimg-microuniversos {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/proyectos/microuniversos/microuniverso (15).jpg"); }
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/proyectos/microuniversos/microuniverso (2).jpg"); }
   .bgimg-ojos {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/proyectos/ojos/ojo (11).jpg"); }
   .bgimg-retratos {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/retratos/retrato (13).jpg"); }
-  .bgimg-instagram {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/retratos/retrato (3).jpg"); }
-    .bgimg-instagram:hover {
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/retratos/retrato (3).jpg"); }
-  .bgimg-correo {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/naturaleza/naturaleza (14).jpg"); }
-    .bgimg-correo:hover {
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/naturaleza/naturaleza (14).jpg"); }
-  .bgimg-px {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/productos/productos (3).jpg"); }
-    .bgimg-px:hover {
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/productos/productos (3).jpg"); }
-  .bgimg-telefono {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/autoretratos/autoretrato (5).jpg"); }
-    .bgimg-telefono:hover {
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/autoretratos/autoretrato (5).jpg"); }
 
 .redirigir {
   color: white;
@@ -268,9 +255,9 @@ body {
   border-radius: 1rem;
   overflow: hidden; }
   .contact-item-instagram {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/retratos/retrato (3).jpg"); }
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/retratos/retrato (12).jpg"); }
     .contact-item-instagram:hover {
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/retratos/retrato (3).jpg"); }
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/retratos/retrato (12).jpg"); }
   .contact-item-correo {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/naturaleza/naturaleza (14).jpg"); }
     .contact-item-correo:hover {
@@ -315,7 +302,8 @@ body {
     width: 50%;
     background-position: center;
     background-size: cover;
-    transition: all 0.4s ease-in; }
+    transition: all 0.4s ease-in;
+    text-align: center; }
     .header-left-1 {
       background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/productos/productos (13).jpg"); }
       .header-left-1:hover {
@@ -336,15 +324,16 @@ body {
     width: 50%;
     background-position: center;
     background-size: cover;
-    transition: all 0.4s ease-in; }
+    transition: all 0.4s ease-in;
+    text-align: center; }
     .header-right-1 {
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/retratos/retratos estudio/estudio (14).jpg"); }
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/retratos/retrato (1).jpg"); }
       .header-right-1:hover {
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../img/retratos/retratos estudio/estudio (14).jpg"); }
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../img/retratos/retrato (1).jpg"); }
     .header-right-2 {
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/proyectos/microuniversos/microuniverso (15).jpg"); }
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/proyectos/microuniversos/microuniverso (8).jpg"); }
       .header-right-2:hover {
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../img/proyectos/microuniversos/microuniverso (15).jpg"); }
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../img/proyectos/microuniversos/microuniverso (8).jpg"); }
   .header-title {
     color: white;
     font-weight: 500;
@@ -491,3 +480,45 @@ body {
 .exlibris {
   background-color: white;
   overflow: hidden; }
+
+.text {
+  padding: 5rem;
+  color: white;
+  display: flex;
+  align-content: center;
+  height: 45rem;
+  width: 100%; }
+  @media screen and (max-width: 600px) {
+    .text {
+      flex-direction: column;
+      height: min-content; } }
+  .text-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 2rem; }
+    @media screen and (max-width: 600px) {
+      .text-container {
+        margin: 0; } }
+  .text-title {
+    font-size: 3em;
+    font-weight: 300; }
+  .text-description {
+    font-size: 1.2em;
+    font-weight: 400;
+    margin: 2rem 0; }
+  .text-image {
+    background-image: url("../img/retratos/retrato-text.jpg");
+    background-size: cover;
+    background-position: center;
+    border-radius: 1rem;
+    overflow: hidden;
+    transition: all 0.5s ease-out; }
+    .text-image:hover {
+      transform: scale(1.03); }
+    .text-image-2 {
+      background-image: url("../img/autoretratos/autoretrato-text.jpg"); }
+    @media screen and (max-width: 600px) {
+      .text-image {
+        width: 100%;
+        height: 40rem; } }
