--- a/sass/pages/_galerias.scss
+++ b/sass/pages/_galerias.scss
@@ -104,3 +104,53 @@
     background-color: white;
     overflow: hidden;
 }
+.text {
+    padding: 5rem;
+    color: white;
+    display: flex;
+    align-content: center;
+    height: 45rem;
+    width: 100%;
+    @media screen and (max-width: 600px) {
+        flex-direction: column;
+        height: min-content;
+    }
+
+    &-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: 0 2rem; 
+        @media screen and (max-width: 600px) {
+            margin: 0;
+        }       
+    }
+    &-title {
+        font-size: 3em;
+        font-weight: 300;
+    }
+    &-description {
+        font-size: 1.2em;
+        font-weight: 400;
+        margin: 2rem 0;
+    }
+    &-image {
+        background-image: url('../img/retratos/retrato-text.jpg');
+        background-size: cover;
+        background-position: center;
+        border-radius: 1rem;
+        overflow: hidden;
+        transition: all 0.5s ease-out;
+        &:hover {
+            transform: scale(1.03);
+        }
+        &-2 {
+            background-image: url('../img/autoretratos/autoretrato-text.jpg');
+
+        }
+        @media screen and (max-width: 600px) {
+            width: 100%;
+            height: 40rem;
+        }
+    }
+}
